Moved hardcoded UI values to dimensions file

--- a/MyHome/app/src/main/res/layout/profile.xml
+++ b/MyHome/app/src/main/res/layout/profile.xml
@@ -14,7 +14,7 @@
             android:background="@color/light_grey"
             android:fontFamily="sans-serif-light"
             android:gravity="center_vertical"
-            android:padding="12dp"
+            android:padding="@dimen/profile_header_padding"
             android:text="Personal Information"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -23,9 +23,9 @@
             android:id="@+id/first_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="36dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginLeft="@dimen/profile_firstname_indent"
+            android:layout_marginStart="@dimen/profile_firstname_indent"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="First"
             app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/info_header" />
@@ -34,8 +34,8 @@
             android:id="@+id/last_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="160dp"
-            android:layout_marginStart="160dp"
+            android:layout_marginLeft="@dimen/profile_lastname_indent"
+            android:layout_marginStart="@dimen/profile_lastname_indent"
             android:text="Last"
             app:layout_constraintLeft_toRightOf="@+id/first_label"
             app:layout_constraintTop_toTopOf="@+id/first_label" />
@@ -46,9 +46,9 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:maxWidth="140dp"
+            android:maxWidth="@dimen/profile_firstname_maxwidth"
             android:text="Kevin"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/first_label" />
@@ -59,9 +59,9 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:maxWidth="140dp"
+            android:maxWidth="@dimen/profile_lastname_maxwidth"
             android:text="Welsh"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/last_label"
             app:layout_constraintTop_toBottomOf="@+id/last_label" />
@@ -70,7 +70,7 @@
             android:id="@+id/dob_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Date of Birth"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/first_name" />
@@ -80,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1/12/1987"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/dob_label" />
@@ -89,7 +89,7 @@
             android:id="@+id/address_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Address"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/dob" />
@@ -100,9 +100,9 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="3"
-            android:maxWidth="140dp"
+            android:maxWidth="@dimen/profile_address_maxwidth"
             android:text="540 Trinity Lane North"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/address_label" />
@@ -121,9 +121,9 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="3"
-            android:maxWidth="140dp"
+            android:maxWidth="@dimen/profile_city_maxwidth"
             android:text="St.Petersburg"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/last_label"
             app:layout_constraintTop_toTopOf="@+id/address" />
@@ -132,7 +132,7 @@
             android:id="@+id/state_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="State"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/address" />
@@ -142,7 +142,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Florida"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/state_label" />
@@ -160,7 +160,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="33716"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/last_label"
             app:layout_constraintTop_toTopOf="@+id/state" />
@@ -169,7 +169,7 @@
             android:id="@+id/phone_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Phone"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/state" />
@@ -179,7 +179,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="867-5309"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/phone_label" />
@@ -188,7 +188,7 @@
             android:id="@+id/email_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Email"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/phone" />
@@ -198,7 +198,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="kwelsh@prokarma.com"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/email_label" />
@@ -207,11 +207,11 @@
             android:id="@+id/insurance_header"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/profile_insuranceheader_marginTop"
             android:background="@color/light_grey"
             android:fontFamily="sans-serif-light"
             android:gravity="center_vertical"
-            android:padding="12dp"
+            android:padding="@dimen/profile_label_marginTop"
             android:text="Insurance Information"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -221,7 +221,7 @@
             android:id="@+id/provider_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Insurance Provider"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/insurance_header" />
@@ -231,7 +231,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Dignity Health"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/provider_label" />
@@ -249,7 +249,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="800-588-2300"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/last_label"
             app:layout_constraintTop_toTopOf="@+id/provider" />
@@ -258,7 +258,7 @@
             android:id="@+id/group_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Group"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/provider" />
@@ -267,9 +267,9 @@
             android:id="@+id/group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="12dp"
+            android:paddingBottom="@dimen/profile_label_marginTop"
             android:text="230-2333"
-            android:textSize="18sp"
+            android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/group_label" />
