--- a/MyHome/app/src/main/res/layout/profile.xml
+++ b/MyHome/app/src/main/res/layout/profile.xml
@@ -267,12 +267,22 @@
             android:id="@+id/group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/profile_label_marginTop"
             android:text="230-2333"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/first_label"
             app:layout_constraintTop_toBottomOf="@+id/group_label" />
+
+        <Button
+            android:id="@+id/sign_out"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
+            android:padding="@dimen/profile_label_marginTop"
+            android:text="Sign Out"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/group" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
