added forgot password implementation

--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,7 @@
 
         <variable
             name="handlers"
-            type="com.dignityhealth.myhome.features.login.LoginFragment.LoginViewClickEvent" />
+            type="com.dignityhealth.myhome.features.login.forgot.password.ForgotPasswordActivity.ForgotPasswordClickEvent" />
     </data>
 
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
@@ -35,7 +35,7 @@
                     style="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Login"
+                    android:text="@string/forgot_password"
                     android:textAlignment="center" />
 
                 <android.support.design.widget.TextInputLayout
@@ -56,66 +56,21 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/password_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder"
-                        android:hint="@string/prompt_password"
-                        android:inputType="textPassword"
-                        android:maxLines="1"
-                        android:padding="16dp" />
-                </android.support.design.widget.TextInputLayout>
-
                 <Button
-                    android:id="@+id/log_in_button"
+                    android:id="@+id/forgot_password_button"
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:onClick="@{handlers::onClickEvent}"
-                    android:text="@string/action_Login"
+                    android:text="@string/action_reset"
                     android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/sign_up_suggestion"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center_horizontal"
-                    android:onClick="@{handlers::onClickEvent}"
-                    android:background="@drawable/button_boarder"
-                    android:padding="16dp"
-                    android:text="@string/signup_suggestion" />
-
-                <TextView
-                    android:id="@+id/forgot_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center_horizontal"
-                    android:onClick="@{handlers::onClickEvent}"
-                    android:padding="16dp"
-                    android:text="@string/forgot_password" />
             </LinearLayout>
         </ScrollView>
 
-
-        <WebView
-            android:id="@+id/web_view_redirect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
-
         <!-- Login progress -->
         <ProgressBar
-            android:id="@+id/login_progress"
+            android:id="@+id/forgot_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
