--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="First"
             app:layout_constraintLeft_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/info_header" />
+            app:layout_constraintTop_toBottomOf="@id/info_header" />
 
         <TextView
             android:id="@+id/last_label"
@@ -37,8 +37,8 @@
             android:layout_marginLeft="@dimen/profile_lastname_indent"
             android:layout_marginStart="@dimen/profile_lastname_indent"
             android:text="Last"
-            app:layout_constraintLeft_toRightOf="@+id/first_label"
-            app:layout_constraintTop_toTopOf="@+id/first_label" />
+            app:layout_constraintLeft_toRightOf="@id/first_label"
+            app:layout_constraintTop_toTopOf="@id/first_label" />
 
         <EditText
             android:id="@+id/first_name"
@@ -50,8 +50,8 @@
             android:text="Kevin"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/first_label" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/first_label" />
 
         <EditText
             android:id="@+id/last_name"
@@ -63,8 +63,27 @@
             android:text="Welsh"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/last_label"
-            app:layout_constraintTop_toBottomOf="@+id/last_label" />
+            app:layout_constraintLeft_toLeftOf="@id/last_label"
+            app:layout_constraintTop_toBottomOf="@id/last_label" />
+
+        <TextView
+            android:id="@+id/preferred_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
+            android:text="Preferred Name"
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/first_name" />
+
+        <EditText
+            android:id="@+id/preferred_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kev"
+            android:textSize="@dimen/profile_text_size"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/preferred_label" />
 
         <TextView
             android:id="@+id/dob_label"
@@ -72,8 +91,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Date of Birth"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/first_name" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/preferred_name" />
 
         <EditText
             android:id="@+id/dob"
@@ -82,8 +101,8 @@
             android:text="1/12/1987"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/dob_label" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/dob_label" />
 
         <TextView
             android:id="@+id/address_label"
@@ -91,8 +110,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Address"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/dob" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/dob" />
 
         <EditText
             android:id="@+id/address"
@@ -104,16 +123,16 @@
             android:text="540 Trinity Lane North"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/address_label" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/address_label" />
 
         <TextView
             android:id="@+id/city_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="City"
-            app:layout_constraintLeft_toLeftOf="@+id/last_label"
-            app:layout_constraintTop_toTopOf="@+id/address_label" />
+            app:layout_constraintLeft_toLeftOf="@id/last_label"
+            app:layout_constraintTop_toTopOf="@id/address_label" />
 
         <EditText
             android:id="@+id/city"
@@ -125,8 +144,8 @@
             android:text="St.Petersburg"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/last_label"
-            app:layout_constraintTop_toTopOf="@+id/address" />
+            app:layout_constraintLeft_toLeftOf="@id/last_label"
+            app:layout_constraintTop_toTopOf="@id/address" />
 
         <TextView
             android:id="@+id/state_label"
@@ -134,24 +153,24 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="State"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/address" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/address" />
 
         <Spinner
             android:id="@+id/state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:entries="@array/profile_states"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/state_label" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/state_label" />
 
         <TextView
             android:id="@+id/zip_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Zip"
-            app:layout_constraintLeft_toLeftOf="@+id/last_label"
-            app:layout_constraintTop_toTopOf="@+id/state_label" />
+            app:layout_constraintLeft_toLeftOf="@id/last_label"
+            app:layout_constraintTop_toTopOf="@id/state_label" />
 
         <EditText
             android:id="@+id/zip"
@@ -160,8 +179,8 @@
             android:text="33716"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/last_label"
-            app:layout_constraintTop_toTopOf="@+id/state" />
+            app:layout_constraintLeft_toLeftOf="@id/last_label"
+            app:layout_constraintTop_toTopOf="@id/state" />
 
         <TextView
             android:id="@+id/phone_label"
@@ -169,8 +188,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Phone"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/state" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/state" />
 
         <EditText
             android:id="@+id/phone"
@@ -179,8 +198,8 @@
             android:text="867-5309"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/phone_label" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/phone_label" />
 
         <TextView
             android:id="@+id/email_label"
@@ -188,8 +207,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Email"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/phone" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/phone" />
 
         <TextView
             android:id="@+id/email"
@@ -198,8 +217,8 @@
             android:text="kwelsh@prokarma.com"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/email_label" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/email_label" />
 
         <TextView
             android:id="@+id/email_notice"
@@ -208,8 +227,8 @@
             android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="You cannot edit email address"
             android:textSize="10sp"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/email" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/email" />
 
         <TextView
             android:id="@+id/insurance_header"
@@ -223,7 +242,7 @@
             android:text="Insurance Information"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_notice" />
+            app:layout_constraintTop_toBottomOf="@id/email_notice" />
 
         <TextView
             android:id="@+id/provider_label"
@@ -231,8 +250,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Insurance Provider"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/insurance_header" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/insurance_header" />
 
         <EditText
             android:id="@+id/provider"
@@ -241,16 +260,16 @@
             android:text="Dignity Health"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/provider_label" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/provider_label" />
 
         <TextView
             android:id="@+id/id_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Member ID"
-            app:layout_constraintLeft_toLeftOf="@+id/last_label"
-            app:layout_constraintTop_toTopOf="@+id/provider_label" />
+            app:layout_constraintLeft_toLeftOf="@id/last_label"
+            app:layout_constraintTop_toTopOf="@id/provider_label" />
 
         <EditText
             android:id="@+id/id"
@@ -259,8 +278,8 @@
             android:text="800-588-2300"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/last_label"
-            app:layout_constraintTop_toTopOf="@+id/provider" />
+            app:layout_constraintLeft_toLeftOf="@id/last_label"
+            app:layout_constraintTop_toTopOf="@id/provider" />
 
         <TextView
             android:id="@+id/group_label"
@@ -268,8 +287,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Group"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/provider" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/provider" />
 
         <EditText
             android:id="@+id/group"
@@ -279,8 +298,8 @@
             android:text="230-2333"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/first_label"
-            app:layout_constraintTop_toBottomOf="@+id/group_label" />
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/group_label" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
