--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -86,13 +86,30 @@
             app:layout_constraintTop_toBottomOf="@id/preferred_label" />
 
         <TextView
+            android:id="@+id/gender_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/profile_label_marginTop"
+            android:text="Gender"
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/preferred_name" />
+
+        <Spinner
+            android:id="@+id/gender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/profile_gender"
+            app:layout_constraintLeft_toLeftOf="@id/first_label"
+            app:layout_constraintTop_toBottomOf="@id/gender_label" />
+
+        <TextView
             android:id="@+id/dob_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/profile_label_marginTop"
             android:text="Date of Birth"
             app:layout_constraintLeft_toLeftOf="@id/first_label"
-            app:layout_constraintTop_toBottomOf="@id/preferred_name" />
+            app:layout_constraintTop_toBottomOf="@id/gender" />
 
         <EditText
             android:id="@+id/dob"
