Login visual designs

--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -48,7 +48,7 @@
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder"
+                        android:background="@drawable/button_boarder_teal"
                         android:hint="@string/prompt_email"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
