--- a/MyHome/app/src/main/res/drawable/button_boarder_grey.xml
+++ b/MyHome/app/src/main/res/drawable/button_boarder_grey.xml
@@ -6,5 +6,10 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/light_grey" />
+        android:color="@color/grey" />
+    <corners
+        android:bottomLeftRadius="60dp"
+        android:bottomRightRadius="60dp"
+        android:topLeftRadius="60dp"
+        android:topRightRadius="60dp" />
 </shape>
