--- a/MyHome/app/src/main/res/layout/activity_terms_of_service.xml
+++ b/MyHome/app/src/main/res/layout/activity_terms_of_service.xml
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/button_boarder"
+                android:background="@drawable/button_boarder_teal"
                 android:onClick="@{handlers::onClickEvent}"
                 android:padding="16dp"
                 android:text="Cancel"
@@ -55,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/button_boarder"
+                android:background="@drawable/button_boarder_teal"
                 android:onClick="@{handlers::onClickEvent}"
                 android:padding="16dp"
                 android:text="Accept"
