--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -48,7 +48,7 @@
                         android:id="@+id/firstName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder"
+                        android:background="@drawable/button_boarder_teal"
                         android:focusableInTouchMode="true"
                         android:hint="@string/prompt_first_name"
                         android:imeOptions="actionNext"
@@ -67,7 +67,7 @@
                         android:id="@+id/lastName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder"
+                        android:background="@drawable/button_boarder_teal"
                         android:focusableInTouchMode="true"
                         android:hint="@string/prompt_last_name"
                         android:imeOptions="actionNext"
@@ -86,7 +86,7 @@
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder"
+                        android:background="@drawable/button_boarder_teal"
                         android:focusableInTouchMode="true"
                         android:hint="@string/prompt_email"
                         android:imeOptions="actionNext"
@@ -105,7 +105,7 @@
                         android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder"
+                        android:background="@drawable/button_boarder_teal"
                         android:focusableInTouchMode="true"
                         android:hint="@string/prompt_password"
                         android:imeOptions="actionNext"
@@ -123,7 +123,7 @@
                         android:id="@+id/re_enter_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder"
+                        android:background="@drawable/button_boarder_teal"
                         android:focusableInTouchMode="true"
                         android:hint="@string/prompt_re_enter_password"
                         android:imeOptions="actionDone"
