--- a/MyHome/app/src/main/res/layout/fragment_login.xml
+++ b/MyHome/app/src/main/res/layout/fragment_login.xml
@@ -1,4 +1,5 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -12,101 +13,109 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
 
-        <ScrollView
-            android:id="@+id/login_form"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/login_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="32dp"
+            android:layout_marginTop="60dp"
+            android:src="@mipmap/home_logo" />
 
-            <LinearLayout
-                android:id="@+id/email_login_form"
+        <RelativeLayout
+            android:id="@+id/email_login_form"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/web_view_redirect"
+            android:focusableInTouchMode="true"
+            android:orientation="vertical">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:focusableInTouchMode="true"
-                android:orientation="vertical">
+                android:layout_above="@+id/password"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="52dp"
+                android:layout_marginRight="52dp"
+                android:hint="@string/prompt_email"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
 
-                <TextView
-                    style="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Login"
-                    android:textAlignment="center" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/email_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/log_in_button"
+                android:layout_marginBottom="36dp"
+                android:layout_marginLeft="52dp"
+                android:layout_marginRight="52dp"
+                android:drawableRight="@mipmap/show_password"
+                android:hint="@string/prompt_password"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder"
-                        android:hint="@string/prompt_email"
-                        android:imeOptions="actionNext"
-                        android:inputType="textEmailAddress"
-                        android:maxLines="1"
-                        android:padding="16dp" />
+            <Button
+                android:id="@+id/log_in_button"
+                style="@style/grayButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_above="@+id/forgot_password"
+                android:layout_marginBottom="62dp"
+                android:layout_marginLeft="52dp"
+                android:layout_marginRight="52dp"
+                android:onClick="@{handlers::onClickEvent}"
+                android:text="@string/action_Login"
+                android:textAllCaps="false" />
 
-                </android.support.design.widget.TextInputLayout>
+            <TextView
+                android:id="@+id/forgot_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/login_help"
+                android:layout_centerHorizontal="true"
+                android:onClick="@{handlers::onClickEvent}"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="8dp"
+                android:text="@string/forgot_password"
+                android:textAlignment="center"
+                android:textColor="@color/teal" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/password_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
+            <TextView
+                android:id="@+id/login_help"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/enroll_now"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"
+                android:onClick="@{handlers::onClickEvent}"
+                android:padding="16dp"
+                android:text="@string/login_help"
+                android:textAlignment="center"
+                android:textColor="@color/teal" />
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder"
-                        android:hint="@string/prompt_password"
-                        android:imeOptions="actionDone"
-                        android:inputType="textPassword"
-                        android:maxLines="1"
-                        android:padding="16dp" />
-                </android.support.design.widget.TextInputLayout>
-
-                <Button
-                    android:id="@+id/log_in_button"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:onClick="@{handlers::onClickEvent}"
-                    android:text="@string/action_Login"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/sign_up_suggestion"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/button_boarder"
-                    android:gravity="center_horizontal"
-                    android:onClick="@{handlers::onClickEvent}"
-                    android:padding="16dp"
-                    android:text="@string/signup_suggestion" />
-
-                <TextView
-                    android:id="@+id/forgot_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center_horizontal"
-                    android:onClick="@{handlers::onClickEvent}"
-                    android:padding="16dp"
-                    android:text="@string/forgot_password" />
-            </LinearLayout>
-        </ScrollView>
+            <TextView
+                android:id="@+id/enroll_now"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@color/teal"
+                android:onClick="@{handlers::onClickEvent}"
+                android:padding="16dp"
+                android:text="@string/enroll_now"
+                android:textAlignment="center"
+                android:textColor="@color/white" />
+        </RelativeLayout>
 
 
         <WebView
