--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -193,6 +193,8 @@
             android:id="@+id/zip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:inputType="number"
+            android:maxLength="5"
             android:text="33716"
             android:textSize="@dimen/profile_text_size"
             android:textStyle="bold"
@@ -309,6 +311,7 @@
             android:id="@+id/id_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:inputType="number"
             android:text="Member ID"
             app:layout_constraintLeft_toLeftOf="@id/last_label"
             app:layout_constraintTop_toTopOf="@id/provider_label" />
