added toolbar style

--- a/MyHome/app/src/main/res/layout/activity_security_question.xml
+++ b/MyHome/app/src/main/res/layout/activity_security_question.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@+id/toolbarWhite"
-            android:background="@color/black" />
+            android:background="@color/md_blue_grey_650" />
 
         <FrameLayout
             android:id="@+id/securityQuestionFrame"
