--- a/MyHome/app/src/main/res/layout/activity_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/activity_enrollment.xml
@@ -12,7 +12,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/black" />
+            android:background="@color/md_blue_grey_650" />
 
         <FrameLayout
             android:id="@+id/enrollFrame"
