--- a/MyHome/app/src/main/res/layout/toolbar_white.xml
+++ b/MyHome/app/src/main/res/layout/toolbar_white.xml
@@ -6,5 +6,4 @@
     android:background="@android:color/transparent"
     android:elevation="4dp"
     android:fitsSystemWindows="true"
-    android:titleTextColor="@color/toolbar_white_text"
-    app:theme="@style/ThemeOverlay.AppCompat.Light" />
+    app:theme="@style/ToolBarTheme.ToolBarStyle" />
