--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -6,12 +6,11 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
-    <style name="AppThemeWhite" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+    <style name="ToolBarTheme.ToolBarStyle"    parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColorPrimary">@color/primary_dark</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorPrimaryInverse">@color/toolbar_white_text</item>
     </style>
-
 
     <style name="tealButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/button_boarder_teal</item>
