--- a/MyHome/app/src/main/res/layout/popup_content.xml
+++ b/MyHome/app/src/main/res/layout/popup_content.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/teal"
     android:elevation="4dp"
     app:cardCornerRadius="2dp">
 
     <TextView
         android:id="@+id/criteria_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_margin="16dp"
+        android:background="@color/teal"
         android:lineSpacingExtra="4dp"
+        android:padding="16dp"
         android:textColor="@color/white" />
 </android.support.v7.widget.CardView>
